[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Obstacles/Destructible/SubDividingDestructible.gd" type="Script" id=1]
[ext_resource path="res://World/Obstacles/Destructible/Destructible.tscn" type="PackedScene" id=2]

[node name="SubDividingDestructible" type="Node2D"]
script = ExtResource( 1 )

[node name="TopLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( -4, -4 )

[node name="TopRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 4, -4 )

[node name="BottomLeft" parent="." instance=ExtResource( 2 )]
position = Vector2( -4, 4 )

[node name="BottomRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 4, 4 )

[connection signal="DestructibleHit" from="TopLeft" to="." method="_on_TopLeft_DestructibleHit"]
[connection signal="DestructibleHit" from="TopRight" to="." method="_on_TopRight_DestructibleHit"]
[connection signal="DestructibleHit" from="BottomLeft" to="." method="_on_BottomLeft_DestructibleHit"]
[connection signal="DestructibleHit" from="BottomRight" to="." method="_on_BottomRight_DestructibleHit"]
